[project]
name = "ha-adjustable-bed"
version = "1.2.0"
description = "Home Assistant integration for adjustable beds (Linak, etc.)"
requires-python = ">=3.13"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.5",
    "pytest-homeassistant-custom-component>=0.13.206",
    "pytest-cov>=4.1.0",
    "pyserial>=3.5",
    "aiousbwatcher>=1.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
addopts = "-n auto --dist loadgroup"
markers = [
    "integration: marks tests as integration tests (require full HA setup)",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
